docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/progress.mdx
---
title: Progress indicators
description: Jetpack Compose progress indicator components for displaying operation status.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Progress Indicators match the official Jetpack Compose [Progress Indicator API](https://developer.android.com/develop/ui/compose/components/progress).

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/progress/android-light.webp"
  darkSrc="/static/images/expo-ui/progress/android-dark.webp"
  alt="Indeterminate circular progress indicator with two determinate linear progress bars at 30% and 75%"
/>

## Installation

<APIInstallSection />

## Usage

### Linear progress

A horizontal bar that fills to indicate progress. Provide a `progress` value between `0` and `1` for determinate mode.

<ComponentExample
  title="LinearExample.tsx"
  src="/static/images/expo-ui/examples/progress-linear-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/progress-linear-android-dark.webp"
  alt="A horizontal progress bar filled to half its track">

```tsx
import {
  Host,
  LinearProgressIndicator,
} from '@expo/ui/jetpack-compose';

export default function LinearExample() {
  return (
    <Host matchContents>
      <LinearProgressIndicator progress={0.5} />
    </Host>
  );
}
```

</ComponentExample>

### Circular progress

A spinning circle whose stroke grows to indicate progress.

<ComponentExample
  title="CircularExample.tsx"
  src="/static/images/expo-ui/examples/progress-circular-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/progress-circular-android-dark.webp"
  alt="A circular progress ring drawn three quarters of the way round">

```tsx
import {
  Host,
  CircularProgressIndicator,
} from '@expo/ui/jetpack-compose';

export default function CircularExample() {
  return (
    <Host matchContents>
      <CircularProgressIndicator progress={0.75} />
    </Host>
  );
}
```

</ComponentExample>

### Indeterminate

Omit the `progress` prop to animate continuously without indicating a specific completion level.

<ComponentExample
  title="IndeterminateExample.tsx"
  src="/static/images/expo-ui/examples/progress-indeterminate-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/progress-indeterminate-android-dark.webp"
  alt="Linear, circular, wavy circular, and wavy linear indicators animating without a set value">

```tsx
import {
  CircularProgressIndicator,
  CircularWavyProgressIndicator,
  Column,
  Host,
  LinearProgressIndicator,
  LinearWavyProgressIndicator,
} from '@expo/ui/jetpack-compose';

export default function IndeterminateExample() {
  return (
    <Host matchContents>
      <Column verticalArrangement={{ spacedBy: 16 }}>
        <LinearProgressIndicator />
        <CircularProgressIndicator />
        <CircularWavyProgressIndicator />
        <LinearWavyProgressIndicator />
      </Column>
    </Host>
  );
}
```

</ComponentExample>

### Custom colors

Use `color` for the indicator and `trackColor` for the background track.

<ComponentExample
  title="ColorsExample.tsx"
  src="/static/images/expo-ui/examples/progress-colors-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/progress-colors-android-dark.webp"
  alt="A circular progress ring drawn in red over a grey track">

```tsx
import {
  Host,
  CircularProgressIndicator,
} from '@expo/ui/jetpack-compose';

export default function ColorsExample() {
  return (
    <Host matchContents>
      <CircularProgressIndicator
        progress={0.6}
        color="red"
        trackColor="#cccccc"
      />
    </Host>
  );
}
```

</ComponentExample>

### Wavy variants

`LinearWavyProgressIndicator` and `CircularWavyProgressIndicator` add an expressive wave animation from Material 3 Expressive.

<ComponentExample
  title="WavyExample.tsx"
  src="/static/images/expo-ui/examples/progress-wavy-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/progress-wavy-android-dark.webp"
  alt="A wavy linear bar and a wavy circular ring, each at sixty percent">

```tsx
import {
  Host,
  LinearWavyProgressIndicator,
  CircularWavyProgressIndicator,
  Column,
} from '@expo/ui/jetpack-compose';

export default function WavyExample() {
  return (
    <Host matchContents>
      <Column verticalArrangement={{ spacedBy: 16 }}>
        <LinearWavyProgressIndicator progress={0.6} />
        <CircularWavyProgressIndicator progress={0.6} />
      </Column>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import {
  LinearProgressIndicator,
  CircularProgressIndicator,
  LinearWavyProgressIndicator,
  CircularWavyProgressIndicator,
} from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/progress" />
